bugs squashed

--- a/merapaisa.css
+++ b/merapaisa.css
@@ -5,3 +5,8 @@ h1{
     font-weight: 400; 
     text-align: center;
 }
+
+
+.selected{
+    background-color:#ccc;
+}
